# die_and_die_again

./: .gitignore  README.md  pyproject.toml  remove_pycache.sh  setup_env.sh
die_and_die_again/: app.py  constants.py  main.py
die_and_die_again/core/: chance_calculator.py  dice_box.py  dice_games.py  dice_shaker.py  die.py  game.py  game_die.py  game_utils.py  log_utils.py  player.py
die_and_die_again/ui/: dice_container_widgets.py  die_widget.py  player_widget.py  sandbox_window.py
tests/: test_die.py
