[project]
name = "die_and_die_again"
# version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "names>=0.3.0",
    "faker>=40.4.0",
    "pyside6>=6.10.2",
    "pyside6_addons>=6.10.2",
    "pyside6_essentials>=6.10.2",
    "sqlalchemy>=2.0.46",
    "alembic>=1.18.3"
]
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pipreqs>=0.5.0"
]

[tool.setuptools]
packages = ["die_and_die_again"]

[tool.setuptools.dynamic]
version = {attr = "die_and_die_again.__version__.__version__"}

